switch the margins on category-slabs to padding and gap assigned on the product-category-menu container.  use extend %header-font on .category-name to fix font-weight and consolidate font-weight and text-transform into one line.  Put the main-container class on the entire HeroSection component and then assign the ThinRule a width of 100vw only for mobile sized devices.  Fix padding on main-container to match design across devices, and bump up the width on the navigation row inside NavBar.  Add =small-laptop breakpoint to increase navigation row even more on those devices, to stop the links from smushing together

--- a/src/components/CategorySlab/category-slab.sass
+++ b/src/components/CategorySlab/category-slab.sass
@@ -1,22 +1,26 @@
 @import ../../sass/global
 
 
+.product-category-menu.main-container
+    gap: 60px
+    padding-top: 70px
+
+    +all-screen-bigger-than-mobile
+        flex-direction: row
+
+    +all-tablets
+        gap: 10px
+    
+    +all-large-screen
+        gap: 30px
+
+
 .category-slab
     align-items: center
     height: 165px
     justify-content: flex-end
-    margin-top: 40px
     padding-bottom: 20px
-    
-    +all-screen-bigger-than-mobile
-        margin-right: 40px
-        margin-top: 80px
-
-.category-slab:nth-of-type(1)
-    margin-top: 70px
-    
-    +all-screen-bigger-than-mobile
-        margin-top: 40px
+      
 
 .thumbnail-image
     height: 104px
@@ -26,8 +30,8 @@
 
 
 .category-name
+    @extend %header-font
     color: $black
-    text-transform: uppercase
 
 .category-slab-button
     margin-top: 10px
