--- a/src/components/NavBar/nav-bar.sass
+++ b/src/components/NavBar/nav-bar.sass
@@ -2,7 +2,10 @@
 
 .navigation-row
     justify-content: space-between
-    width: 35%
+    width: 38.6486486486486%
+
+    +small-laptop
+        width: 45%
 
 
 .nav-link
